release(calora): publish current production source
